--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
     <div id="newmain">
         <div id="main" class="text-center">
             <p class=" display-6 ">Entry Number</p>
-            <input type="number" class="int form-control" id="numberİnput" minlength="1" maxlength="2">
+            <div id="inputs" class="d-flex justify-content-center">
+                <input type="number" class="int form-control w-50" id="numberİnput" minlength="1" maxlength="2">
+            </div>
             <button id="enterbtn" class="btn btn-dark mt-4" type="button">Prediction</button>
             <h1 class="display-1 " id="result"></h1>
             <h1 class="display-1" id="result2"></h1>
