--- a/index.html
+++ b/index.html
@@ -42,7 +42,11 @@
             <h1 class="display-1" id="result2"></h1>
         </div>
     </div>
-
+        <div id="me" class="text-center mt-4">
+        <h1 class="display-6">By</h1>
+        <h1 class="display-6">To</h1>
+        <h1 class="display-6">MonJoR</h1>
+    </div>
     <script src="index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
 </body>
